# ArmaField-Windows-Server

./: .gitignore  Cargo.toml  LICENSE  README.md  example_config.json  launcher.example.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
examples/: fake_server.rs
src/: admin.rs  cli.rs  error.rs  lib.rs  logging.rs  main.rs  paths.rs
src/config/: arma.rs  launcher.rs  mapseeding.rs  mod.rs  runtime.rs
src/firewall/: mod.rs
src/service/: manage.rs  mod.rs  run.rs
src/steamcmd/: install.rs  marker.rs  mod.rs  validate.rs
src/supervisor/: argv.rs  mod.rs  process.rs
tests/: cli_help.rs  config_check.rs  runtime_config.rs
