[package]
name         = "armafield-server"
version      = "1.0.0"
edition      = "2024"
rust-version = "1.85"
description  = "Arma Reforger dedicated server supervisor for Windows with ArmaField MapSeeding rotation"
license      = "MIT"
repository   = "https://github.com/ArmaField/ArmaField-Windows-Server"

[[bin]]
name = "armafield-server"
path = "src/main.rs"

[lib]
name = "armafield_server"
path = "src/lib.rs"

[dependencies]
clap               = { version = "4", features = ["derive"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
toml               = "0.8"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender   = "0.2"
anyhow             = "1"
thiserror          = "1"
ureq               = "2"
zip                = "0.6"
ctrlc              = "3"
windows-service    = "0.6"
shell-words        = "1"
time               = { version = "0.3", features = ["formatting", "macros"] }
is-terminal        = "0.4"

[dependencies.windows]
version  = "0.56"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
]

[dev-dependencies]
tempfile   = "3"
assert_cmd = "2"
predicates = "3"
filetime   = "0.2"

[[example]]
name = "fake_server"
path = "examples/fake_server.rs"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"